:bug: (buttons) Ooops, I had the wrong size for the buttons

--- a/src/components/buttons.less
+++ b/src/components/buttons.less
@@ -25,6 +25,7 @@ Primary buttons exist for every color in this UI-kit. Please refer to the [color
 <p><a href="#" role="button" class="btn-primary btn-primary-grey-100">btn-primary-grey-100</a></p>
 <p><a href="#" role="button" class="btn-primary btn-primary-grey-200">btn-primary-grey-200</a></p>
 <p><a href="#" role="button" class="btn-primary btn-primary-grey-300">btn-primary-grey-300</a></p>
+<p><a href="#" role="button" class="btn-primary btn-primary-grey-400">btn-primary-grey-400</a></p>
 ```
 
 ## Secondary buttons
@@ -42,6 +43,7 @@ As for primary buttons, secondary buttons exist in every color available.
 <p><a href="#" role="button" class="btn-secondary btn-secondary-grey-100">btn-secondary-grey-100</a></p>
 <p><a href="#" role="button" class="btn-secondary btn-secondary-grey-200">btn-secondary-grey-200</a></p>
 <p><a href="#" role="button" class="btn-secondary btn-secondary-grey-300">btn-secondary-grey-300</a></p>
+<p><a href="#" role="button" class="btn-secondary btn-secondary-grey-400">btn-secondary-grey-400</a></p>
 ```
 
 ## Active state
@@ -69,7 +71,7 @@ Disabled buttons should include the `aria-disabled="true"` attribute to indicate
 
 .btn {
     display: inline-block;
-    padding: @spacing-md;
+    padding: @spacing-sm @spacing-lg;
     font-weight: bold;
     font-size: @font-size-sm;
     line-height: 1em;
